; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/librumpclient/extr_h_execthr.c_getproc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/lib/librumpclient/extr_h_execthr.c_getproc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kinfo_proc2 = type { i32 }

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_PROC2 = common dso_local global i32 0, align 4
@KERN_PROC_PID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.kinfo_proc2*)* @getproc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getproc(i32 %0, %struct.kinfo_proc2* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kinfo_proc2*, align 8
  %5 = alloca [6 x i32], align 16
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store %struct.kinfo_proc2* %1, %struct.kinfo_proc2** %4, align 8
  store i64 4, i64* %6, align 8
  %7 = load i32, i32* @CTL_KERN, align 4
  %8 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  store i32 %7, i32* %8, align 16
  %9 = load i32, i32* @KERN_PROC2, align 4
  %10 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @KERN_PROC_PID, align 4
  %12 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 2
  store i32 %11, i32* %12, align 8
  %13 = load i32, i32* %3, align 4
  %14 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 3
  store i32 %13, i32* %14, align 4
  %15 = load i64, i64* %6, align 8
  %16 = trunc i64 %15 to i32
  %17 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 4
  store i32 %16, i32* %17, align 16
  %18 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 5
  store i32 1, i32* %18, align 4
  %19 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %20 = getelementptr inbounds [6 x i32], [6 x i32]* %5, i64 0, i64 0
  %21 = call i32 @__arraycount(i32* %20)
  %22 = load %struct.kinfo_proc2*, %struct.kinfo_proc2** %4, align 8
  %23 = call i32 @rump_sys___sysctl(i32* %19, i32 %21, %struct.kinfo_proc2* %22, i64* %6, i32* null, i32 0)
  ret i32 %23
}

declare dso_local i32 @rump_sys___sysctl(i32*, i32, %struct.kinfo_proc2*, i64*, i32*, i32) #1

declare dso_local i32 @__arraycount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
